--- a/src/Styles/projects.css
+++ b/src/Styles/projects.css
@@ -13,7 +13,7 @@
   flex-direction: column;
 }
 
-.projects {
+.projects-header {
   position: relative;
   right: 20px;
 }
@@ -23,7 +23,7 @@
 }
 
 .project-tiles {
-  background: lightgreen;
+  /* background: lightgreen; */
   width: 100%;
   height: 100%;
   display: flex;
@@ -76,42 +76,42 @@
 
 /* TITLE COLOURS FOR TABLET & MOBILE  */
 
-.two-lines-first span:nth-child(1) {
+.projects .two-lines-first span:nth-child(1) {
   color: var(--sunflower);
   padding-right: 20px;
 }
 
-.two-lines-first span:nth-child(2) {
+.projects .two-lines-first span:nth-child(2) {
   color: var(--trump);
   padding-right: 15px;
 }
 
-.two-lines-first span:nth-child(3) {
+.projects .two-lines-first span:nth-child(3) {
   color: var(--hungry-caterpillar);
   transform: rotate(45deg);
   position: relative;
   bottom: 12px;
 }
 
-.two-lines-first span:nth-child(4) {
+.projects .two-lines-first span:nth-child(4) {
   color: var(--fire-engine);
 }
 
-.two-lines-second span:nth-child(1) {
+.projects .two-lines-second span:nth-child(1) {
   color: var(--dark-red);
   padding-left: 5px;
 }
 
-.two-lines-second span:nth-child(2) {
+.projects .two-lines-second span:nth-child(2) {
   color: var(--fire-engine);
 }
 
-.two-lines-second span:nth-child(3) {
+.projects .two-lines-second span:nth-child(3) {
   color: var(--sunflower);
   padding-left: 5px;
 }
 
-.two-lines-second span:nth-child(4) {
+.projects .two-lines-second span:nth-child(4) {
   color: var(--trump);
 }
 
@@ -153,6 +153,9 @@
     align-items: center;
   }
 
+  .tile:nth-child(n+3) {
+    display: none;
+  }
 
 }
 
@@ -171,4 +174,12 @@
     height: 174px;
     display: flex;     
     flex-direction: column;
+  }
+
+  .project-tiles {
+    height: calc(100% - 174px);
+  }
+
+  .tile:nth-child(n+2) {
+    display: none;
   }
