--- a/src/Styles/tiles.css
+++ b/src/Styles/tiles.css
@@ -1,5 +1,5 @@
 .tile {
-  background: red;
+  /* background: red; */
   width: 260px;
   display: flex;
   flex-direction: column;
